--- a/AntProjiect/AntProjiect.vcxproj.filters
+++ b/AntProjiect/AntProjiect.vcxproj.filters
@@ -24,18 +24,24 @@
     <ClCompile Include="DoodleBug.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="BaseAnt.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ant.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="doodlebug.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Utls.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="UI.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseAnt.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Ant.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DoodleBug.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
