--- a/AntProjiect/AntProjiect.vcxproj
+++ b/AntProjiect/AntProjiect.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -139,13 +139,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ant.cpp" />
-    <ClCompile Include="BaseAnt.cpp" />
+    <ClCompile Include="MapLocation.cpp" />
+    <ClCompile Include="Organism.cpp" />
     <ClCompile Include="DoodleBug.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ant.h" />
-    <ClInclude Include="BaseAnt.h" />
+    <ClInclude Include="MapLoction.h" />
+    <ClInclude Include="Organism.h" />
     <ClInclude Include="DoodleBug.h" />
     <ClInclude Include="UI.h" />
     <ClInclude Include="Utls.h" />
